Table users {
  id integer [pk, increment, not null]
  name varchar [not null]
  email varchar [not null, unique]
  password varchar [not null]
  username varchar [not null, unique]
  birthday varchar [not null]
  status varchar [not null]
  avatar_url varchar
  created_at timestamp [default: "now()", not null]
  updated_at timestamp [default: "now()", not null]
  deleted_at timestamp [default: null]
  role_id integer [ref: > roles.id]
}

Table roles {
  id integer [pk, increment, not null]
  name varchar
  description varchar
  created_at timestamp [default: "now()"]
  updated_at timestamp [default: "now()"]
}

Table permissions {
  id integer [pk, increment, not null]
  name varchar
  created_at timestamp [default: "now()"]
  updated_at timestamp [default: "now()"]
  group varchar
}

Table role_permissions {
  id integer [pk, increment, not null]
  role_id integer [not null, ref: > roles.id]
  permission_id integer [not null, ref: > permissions.id]
  created_at timestamp [default: "now()"]
  updated_at timestamp [default: "now()"]
}

Table api_logs {
  id integer [pk, increment]
  level varchar
  method varchar
  url text
  status_code int
  duration_ms int
  user_id int
  request_id varchar
  controller varchar
  handler varchar
  ip varchar
  user_agent text
  params jsonb
  query jsonb
  body jsonb
  error_name varchar
  error_message text
  stack text
  message text
  created_at timestamp [default: "now()"]
}

Table audit_logs {
  id integer [pk, increment]
  level varchar
  action varchar
  entity varchar
  entity_id varchar
  source varchar
  user_id int
  message text
  request_id varchar
  context jsonb
  created_at timestamp [default: "now()"]
}
